--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,13 @@
     		<version>3.10</version>
 		</dependency>
   
+		<!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+		<dependency>
+    		<groupId>commons-fileupload</groupId>
+    		<artifactId>commons-fileupload</artifactId>
+    		<version>1.3.3</version>
+		</dependency>
+		
 		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 		<dependency>
     		<groupId>mysql</groupId>
