--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,19 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.sun.org/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
-
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.sun.org/xml/ns/javaee" xmlns:jsp="http://java.sun.com/xml/ns/javaee/jsp" xmlns:web="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
   <display-name>epamtc-final-project-online-shop</display-name>
-  
   <welcome-file-list>
     <welcome-file>Controller</welcome-file>
   </welcome-file-list>
-  
   <servlet>
     <description></description>
     <display-name>Controller</display-name>
     <servlet-name>Controller</servlet-name>
     <servlet-class>by.epamtc.melnikov.onlineshop.controller.Controller</servlet-class>
   </servlet>
-  
   <servlet-mapping>
     <servlet-name>Controller</servlet-name>
     <url-pattern>/Controller</url-pattern>
@@ -22,13 +18,20 @@
     <url-pattern>/jsp/user/Controller</url-pattern>
     <url-pattern>/jsp/guest/Controller</url-pattern>
   </servlet-mapping>
-  
-	<jsp-config>
-		<jsp-property-group>
-			<url-pattern>*.jsp</url-pattern>
-			<include-prelude>/jsp/include/header.jsp</include-prelude>
-			<include-coda>/jsp/include/footer.jsp</include-coda>
-		</jsp-property-group>
-	</jsp-config>
-  
+  <jsp-config>
+    <jsp-property-group>
+      <url-pattern>*.jsp</url-pattern>
+      <include-prelude>/jsp/include/header.jsp</include-prelude>
+      <include-coda>/jsp/include/footer.jsp</include-coda>
+    </jsp-property-group>
+  </jsp-config>
+  <filter>
+    <display-name>LocalizationFilter</display-name>
+    <filter-name>LocalizationFilter</filter-name>
+    <filter-class>by.epamtc.melnikov.onlineshop.controller.filter.LocalizationFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>LocalizationFilter</filter-name>
+    <url-pattern>/LocalizationFilter</url-pattern>
+  </filter-mapping>
 </web-app>
