--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,9 @@
   <welcome-file-list>
     <welcome-file>Controller</welcome-file>
   </welcome-file-list>
+  <error-page>
+    <location>/jsp/error.jsp</location>
+  </error-page>
   <servlet>
     <description></description>
     <display-name>Controller</display-name>
@@ -32,6 +35,7 @@
   </filter>
   <filter-mapping>
     <filter-name>LocalizationFilter</filter-name>
-    <url-pattern>/LocalizationFilter</url-pattern>
+    <url-pattern>/Controller</url-pattern>
+    <url-pattern>*.jsp</url-pattern>
   </filter-mapping>
 </web-app>
