--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.sun.org/xml/ns/javaee" xmlns:jsp="http://java.sun.com/xml/ns/javaee/jsp" xmlns:web="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
+
   <display-name>epamtc-final-project-online-shop</display-name>
+  
   <welcome-file-list>
     <welcome-file>Controller</welcome-file>
   </welcome-file-list>
+  
   <error-page>
     <location>/jsp/error.jsp</location>
   </error-page>
+  
+  <session-config>
+     <session-timeout>15</session-timeout>
+  </session-config>
+  
   <servlet>
     <description></description>
     <display-name>Controller</display-name>
@@ -21,6 +29,7 @@
     <url-pattern>/jsp/user/Controller</url-pattern>
     <url-pattern>/jsp/guest/Controller</url-pattern>
   </servlet-mapping>
+  
   <jsp-config>
     <jsp-property-group>
       <url-pattern>*.jsp</url-pattern>
@@ -28,6 +37,7 @@
       <include-coda>/jsp/include/footer.jsp</include-coda>
     </jsp-property-group>
   </jsp-config>
+  
   <filter>
     <display-name>LocalizationFilter</display-name>
     <filter-name>LocalizationFilter</filter-name>
@@ -38,4 +48,29 @@
     <url-pattern>/Controller</url-pattern>
     <url-pattern>*.jsp</url-pattern>
   </filter-mapping>
+  
+  <filter>
+    <display-name>UserRolePermittedCommandFilter</display-name>
+    <filter-name>UserRolePermittedCommandFilter</filter-name>
+    <filter-class>by.epamtc.melnikov.onlineshop.controller.filter.UserRolePermittedCommandFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>UserRolePermittedCommandFilter</filter-name>
+    <url-pattern>/Controller</url-pattern>
+  </filter-mapping>
+  
+  <filter>
+    <display-name>UserRolePermittedPageFilter</display-name>
+    <filter-name>UserRolePermittedPageFilter</filter-name>
+    <filter-class>by.epamtc.melnikov.onlineshop.controller.filter.UserRolePermittedPageFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>UserRolePermittedPageFilter</filter-name>
+    <url-pattern>*.jsp</url-pattern>
+  </filter-mapping> 
+  
+  <listener>
+    <listener-class>by.epamtc.melnikov.onlineshop.controller.listener.SessionListener</listener-class>
+  </listener>
+  
 </web-app>
