--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.sun.org/xml/ns/javaee" xmlns:jsp="http://java.sun.com/xml/ns/javaee/jsp" xmlns:web="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
-
   <display-name>epamtc-final-project-online-shop</display-name>
   
   <welcome-file-list>
@@ -12,7 +11,7 @@
   </error-page>
   
   <session-config>
-     <session-timeout>15</session-timeout>
+    <session-timeout>15</session-timeout>
   </session-config>
   
   <servlet>
@@ -31,6 +30,10 @@
   </servlet-mapping>
   
   <jsp-config>
+    <taglib>
+      <taglib-uri>customtags</taglib-uri>
+      <taglib-location>/tld/copyright.tld</taglib-location>
+    </taglib>
     <jsp-property-group>
       <url-pattern>*.jsp</url-pattern>
       <include-prelude>/jsp/include/header.jsp</include-prelude>
@@ -39,14 +42,13 @@
   </jsp-config>
   
   <filter>
-    <display-name>LocalizationFilter</display-name>
-    <filter-name>LocalizationFilter</filter-name>
-    <filter-class>by.epamtc.melnikov.onlineshop.controller.filter.LocalizationFilter</filter-class>
+    <display-name>UserAutoLogInByTokenFilter</display-name>
+    <filter-name>UserAutoLogInByTokenFilter</filter-name>
+    <filter-class>by.epamtc.melnikov.onlineshop.controller.filter.UserAutoLogInByTokenFilter</filter-class>
   </filter>
   <filter-mapping>
-    <filter-name>LocalizationFilter</filter-name>
+    <filter-name>UserAutoLogInByTokenFilter</filter-name>
     <url-pattern>/Controller</url-pattern>
-    <url-pattern>*.jsp</url-pattern>
   </filter-mapping>
   
   <filter>
@@ -67,7 +69,18 @@
   <filter-mapping>
     <filter-name>UserRolePermittedPageFilter</filter-name>
     <url-pattern>*.jsp</url-pattern>
-  </filter-mapping> 
+  </filter-mapping>
+  
+  <filter>
+    <display-name>LocalizationFilter</display-name>
+    <filter-name>LocalizationFilter</filter-name>
+    <filter-class>by.epamtc.melnikov.onlineshop.controller.filter.LocalizationFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>LocalizationFilter</filter-name>
+    <url-pattern>/Controller</url-pattern>
+    <url-pattern>*.jsp</url-pattern>
+  </filter-mapping>
   
   <listener>
     <listener-class>by.epamtc.melnikov.onlineshop.controller.listener.SessionListener</listener-class>
