Update: Resources updated

--- a/src/main/resources/connectionPool.properties
+++ b/src/main/resources/connectionPool.properties
@@ -4,5 +4,5 @@ useUnicode = true
 autoReconnect = true
 useSSL = false
 user = root
-password = example
+password = rbceyzvty375298682036ZxC%
 poolSize = 10
