--- a/src/main/resources/email.properties
+++ b/src/main/resources/email.properties
@@ -3,5 +3,5 @@ mail.smtp.auth=true
 mail.smtp.host=smtp.gmail.com
 mail.smtp.port=587
 mail.smtp.user=epamfinalproject@gmail.com
-mail.smtp.password=example
+mail.smtp.password=vfijyrf868%
 mail.smtp.starttls.enable=true
