--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -50,7 +50,27 @@
     <filter-name>UserAutoLogInByTokenFilter</filter-name>
     <url-pattern>/Controller</url-pattern>
   </filter-mapping>
+
+  <filter>
+    <display-name>UserBanFilter</display-name>
+    <filter-name>UserBanFilter</filter-name>
+    <filter-class>by.epamtc.melnikov.onlineshop.controller.filter.UserBanFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>UserBanFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
   
+  <filter>
+    <display-name>XSSProtectionFilter</display-name>
+    <filter-name>XSSProtectionFilter</filter-name>
+    <filter-class>by.epamtc.melnikov.onlineshop.controller.filter.xss.XSSProtectionFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>XSSProtectionFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+
   <filter>
     <display-name>UserRolePermittedCommandFilter</display-name>
     <filter-name>UserRolePermittedCommandFilter</filter-name>
